--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,10 +8,34 @@
 	<h1>Hello JSP!</h1>
 
 	<br>
-	<form action="index_ok.jsp">  
+	<form action="welcome1.jsp">  
 	<input type="text" name="uname">  
-	<input type="submit" value="go"><br/>  
+	<input type="submit" value="go(Request)">
+	</form>
+	
+	<br>
+	<form action="welcome2.jsp">  
+	<input type="text" name="uname">  
+	<input type="submit" value="go(Response)"><br/>  
+	</form>  
+	
+	<br>
+	<form action="welcome3.jsp">  
+	<input type="text" name="uname">  
+	<input type="submit" value="go(Config/Application)"><br/>  
+	</form>  
+	
+	<br>
+	<form action="welcome4.jsp">  
+	<input type="text" name="uname">  
+	<input type="submit" value="go(Session)"><br/>  
+	</form>  
+	
+	<br>
+	<form action="welcome5.jsp">  
+	<input type="text" name="uname">  
+	<input type="submit" value="go(PageContext)"><br/>  
+	</form>  
 
-</form>  
 </body>
 </html>
